1.0.0 (trunk):
* Improve error messages to distinguish where they happen.
* Install otunctl command-line tool to create persistent tun/taps.
* Build debug symbols, annot and bin_annot files by default.
* getifaddrs now lists IPv6 as well.

0.7.0 (28-Sep-2013):
* Add FreeBSD support.
* Add Travis continuous integration scripts.

0.6 (07-Aug-2013):
* Remove dependency on cstruct
* Add dependency on ipaddr
* Removed redundant functions (now in ipaddr)

0.5 (30-May-2013):
* Add a non-blocking packet dumper test.
* New function getifaddrs, binding to getifaddrs(3).
* New version of tunctl, using cmdliner.
* Add a set_ipv4 test to check the behaviour of set_ipv4.

0.4 (25-May-2013):
* Fixed MacOS X tuntap support.

0.3 (22-May-2013):
* First public release.